updated service worker and re-wrote offline functionality in idb.js

--- a/public/index.html
+++ b/public/index.html
@@ -47,13 +47,13 @@
   <script src="js/index.js"></script>
   
   <script>
-    (function() {
-      if("serviceWorker" in navigator) {
-        navigator.serviceWorker.register("./service-worker.js")
-          .then(() => console.log("Service Worker registered successfully."))
-          .catch(error => console.log("Service Worker registration failed:", error));
-      }
-    })();
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", () => {
+        navigator.serviceWorker.register("service-worker.js").then(reg => {
+          console.log("Service Worker registered successfully.", reg);
+        });
+      });
+    }
     </script>
 
 </body>
